<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #404040"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:background="@drawable/smooth_rectangle"
        android:gravity="center|right"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="4">

        <Button
            android:id="@+id/c"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4AFD0000"
            android:onClick="ButtonClick"
            android:text="@string/c"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/ac"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4AFD0000"
            android:onClick="ButtonClick"
            android:text="@string/ac"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/modulo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/modulo"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/div"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="4">

        <Button
            android:id="@+id/seven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/seven"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/eight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/eight"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/nine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/nine"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/multiply"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="4">

        <Button
            android:id="@+id/four"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/four"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/five"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/five"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/six"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/six"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/subtract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/sub"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="4">

        <Button
            android:id="@+id/one"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/one"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/two"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/two"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/three"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/three"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/add"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="4">

        <Button
            android:id="@+id/zero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/zero"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/decimal_pt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/decimal"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4A000000"
            android:onClick="ButtonClick"
            android:text="@string/equal"
            android:textColor="#B3FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text=" Thinley Jigme"
        android:textColor="#595959"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>